fix attribution panel z-index

--- a/src/content-handlers/iiif/modules/uv-mediaelementcenterpanel-module/css/overrides.less
+++ b/src/content-handlers/iiif/modules/uv-mediaelementcenterpanel-module/css/overrides.less
@@ -4,7 +4,7 @@
 	}
 
 	.attribution {
-		z-index: 100;
+		z-index: 19;
 	}
 
 	.mejs__button > button:focus {
